# alloy-service

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
alloyai/: __init__.py  alloy.py  gpu_manager.py  image_loader.py  logging_utils.py  model_registry.py  request_scheduler.py  runtime.py  types.py
alloyai/models/: __init__.py  diffusion_model.py  diffusion_pipeline_allocator.py  get_diffusion_callback.py  model.py
alloyai/models/audio/: __init__.py  chatterbox_turbo.py  qwen_tts.py
alloyai/models/image/: __init__.py  flux2dev.py  flux2dev_turbo.py  flux2klein.py  glm_image.py  qwen_image.py  qwen_image_edit.py  z_image.py  z_image_turbo.py
alloyai/models/text/: __init__.py  gpt_oss.py  ollama_models.py  ollama_text_model.py  pipeline_text_model.py  transformer_model_allocator.py
alloyai/models/text/types/: types.py
alloyai/models/video/: ltx2_model.py
alloyai/server/: app.py  schemas.py
alloyai/server/routes/: audio.py  chat.py  image.py  models.py
scripts/: alloyai-init.sh  alloyai-install.sh  alloyai-start.sh  alloyai.service
