[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alloyai-server"
version = "0.1.0"
description = "Unified model backend for multi-modal inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
server = [
  "fastapi>=0.100.0",
  "uvicorn>=0.22.0",
  "pydantic>=2.0.0",
]
ollama = [
  "ollama>=0.1.0",
]
models = [
  "numpy>=1.23.0",
  "pillow>=10.0.0",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "torchaudio>=2.0.0",
  "diffusers>=0.30.0",
  "transformers>=4.40.0",
  "vllm>=0.15.0"
]
gpu = [
  "nvidia-ml-py>=12.0.0",
]
all = [
  "fastapi>=0.100.0",
  "uvicorn>=0.22.0",
  "pydantic>=2.0.0",
  "ollama>=0.1.0",
  "numpy>=1.23.0",
  "pillow>=10.0.0",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "torchaudio>=2.0.0",
  "diffusers>=0.30.0",
  "transformers>=4.40.0",
  "nvidia-ml-py>=12.0.0",
  "vllm>=0.15.0"
]

[project.scripts]
alloy = "alloyai.alloy:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["alloyai*"]
